2006-10-24  Per Bothner  <per@bothner.com>

	* Document.java (parseCached): Also call beginEntity/endEntity here.
	* Nodes.java (root): Fix thinko in BEGIN_ENTITY handling.

2006-10-22  Per Bothner  <per@bothner.com>

	* Document.java (parseCached): Also call beginEntity/endEntity.

	* MakeWithBaseUri.java: New class, extends NodeConstructor.
	* Makefile.am: Update accordingly.
	* KNode.java (make): Skip BEGIN_ENTITY instructions.
	(getBaseURI): Remove pointless method.
	* Document.java (parseCached): Inline call to removed BaseUri.baseUri.
	* Nodes.java (writeBaseUri): Removed method.
	(beginEntity, endEntity): New methods, for XConsumer.
	(root): Alternative and more efficient implementation.
	(root(Object)): Remove pointless method.

2006-10-19  Per Bothner  <per@bothner.com>

	* XTimeType.java (isInstance):  Component masks have to match, not
	just be a subset: An xs:gYearMonth is not an instance of an xs:gYear.

	* XIntegerType.java (negativeIntegerType): Fix thinko.

2006-10-11  Per Bothner  <per@bothner.com>

	* XDataType.java (replaceWhitespace): New static method.
	(valueOf): Do replaceWhitespace for anyURI.

	* XDataType.java (value): Check syntax of decimal literals.

	* UntypedAtomic.java (hashCode, equals): New methods.
	Needed for distinct-values.

	* CommentConstructor.java (apply): Handle the case when an argument
	is multiple Values.

	* Base64Binary.java (toString): Fix buglet.

2006-10-06  Per Bothner  <per@bothner.com>

	* KProcessingInstruction.java (coerceOrNullMethod): Fix buglet.

	* XTimeType.java (fixedTimeZone): New static field and helper method.
	(now): Use fxiedTimeZone to match XQuery specification.
	(parseDateTime): New static helepr method.
	(valueOf): Use parseDateTime

2006-09-30  Per Bothner  <per@bothner.com>

	* Document.java (parse, parseCached): Use new writeDocumentUri
	rather than incorrect writeBaseUri.

	* AncestorAxis.java (scan):  Fix logic error.
	* AncestorOrSelfAxis.java (svan): Likewise.
