@@ -1,3 +1,8 @@
+2006-10-25  Per Bothner  <per@bothner.com>
+
+	* StringValue.java (asString): New static method.
+	* XDataType.java (cast): Use new method to cast to string.
+
 2006-10-24  Per Bothner  <per@bothner.com>
 
 	* Document.java (parseCached): Also call beginEntity/endEntity here.
